--- a/Netflix-Clone-App/package.json
+++ b/Netflix-Clone-App/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "db-start": "supabase start",
-    "db-stop": "supabase stop --backup"
+    "db-stop": "supabase stop --backup",
+    "type-gen": "npx supabase gen types typescript --local > src/types/supabase.ts"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +21,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@supabase/supabase-js": "^2.42.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -37,6 +39,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "supabase": "^1.153.1",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2"
   }
