--- a/Netflix-Clone-App/package.json
+++ b/Netflix-Clone-App/package.json
@@ -44,5 +44,10 @@
     "supabase": "^1.153.1",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2"
+  },
+  "overrides": {
+    "@supabase/supabase-js": {
+      "@supabase/auth-js": "2.61.0"
+    }
   }
 }
