--- a/Netflix-Clone-App/package.json
+++ b/Netflix-Clone-App/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ng-icons/core": "^27.2.0",
+    "@ng-icons/material-icons": "^27.2.0",
     "@supabase/supabase-js": "^2.42.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
